# simple-oauth-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
examples/: basic.rs  dynamic.rs
src/: common.rs  lib.rs  provider.rs  types.rs
src/common/: discord.rs  github.rs  gitlab.rs  google.rs  oidc.rs
