[package]
name = "simple-oauth"
version = "0.1.0"
edition = "2024"
description = "Simple OAuth2 login and authorization"

[dependencies]
oauth2 = { version = "5", default-features = false }
oauth2-reqwest = "0.1.0-alpha.3"
reqwest = { version = "0.13", default-features = false, features = ["json"] }
serde = "1.0"
serde_json = "1.0"
thiserror = "2.0"

[features]
default = ["default-tls"]
default-tls = ["reqwest/default-tls"]
native-tls = ["reqwest/native-tls"]
