[package]
name = "simple-oauth"
version = "0.1.0-beta.1"
edition = "2024"
rust-version = "1.94"
description = "Simple OAuth2 login and authorization"
repository = "https://github.com/fa-sharp/simple-oauth-rs"
license = "MIT OR Apache-2.0"
keywords = ["authentication", "axum", "oauth", "oauth2", "oidc"]
categories = ["asynchronous", "authentication", "web-programming"]

[dependencies]
bon = "3.9"
oauth2 = { version = "5", default-features = false }
oauth2-reqwest = "0.1.0-alpha.3"
reqwest = { version = "0.13", default-features = false, features = ["json"] }
serde = "1.0"
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
tokio = {
  version = "1.52.3",
  default-features = false,
  features = ["macros", "rt", "rt-multi-thread"]
}

[features]
default = ["default-tls"]
default-tls = ["reqwest/default-tls"]
native-tls = ["reqwest/native-tls"]
